feat: Implement site customization including a stock photos page, custom font, favicon, default header image, and updated content and documentation.

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,3 +1,15 @@
 <!-- favicon -->
 <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+<style>
+    .site-title,
+    .site-title a {
+        font-family: 'Parisienne', cursive !important;
+        font-weight: 400 !important;
+    }
+</style>
